@@ -6,6 +6,7 @@
   * Calling CHAPI use cert and key straight from DB, without openssl conversion
     that drops cert chain. (#931)
   * Remind people to restart apache after changing privileges (#933)
+  * Label download whether the cert was portal generated (#840)
 
 == 2.6.1 ==
   * Fix displaying email address in handle project request (#915)
